--- a/.github/workflows/sprout.yml
+++ b/.github/workflows/sprout.yml
@@ -3,15 +3,20 @@ on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    container:
+      image: nibbler
+      volumes:
+      - ${{ github.workspace }}:/data
+      - /var/run/docker.sock:/var/run/docker.sock
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v2
+        with:
+          path: 'data'
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
+      - run: node main.js
+        working-directory: /app/
+        env:
+          DATA_PATH: "${{ github.workspace }}"
+      - run: ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
